# deep-learning-final-project

./: README.md  pyproject.toml
cnn_modeling/: basic_cnn.ipynb  basic_cnn_full_img.ipynb  model_evaluation.ipynb  transfer_learning.ipynb
super-resolution/: evaluate_super_res.py  process_esrgan_super_res.py  process_rdn_super_res.py
