[project]
name = "deep-learning-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "scikit-image>=0.25.2",
    "seaborn>=0.13.2",
    "super-image>=0.1.7",
    "tensorflow==2.17.0",
    "tensorflow-hub>=0.16.1",
    "torchsr>=1.0.4",
]
